--- a/.github/workflows/liara.yaml
+++ b/.github/workflows/liara.yaml
@@ -17,4 +17,4 @@ jobs:
           LIARA_TOKEN: ${{ secrets.LIARA_API_TOKEN }}
         run: |
           npm i -g @liara/cli@4
-          liara deploy --app="eazy" --api-token="$LIARA_TOKEN" --detach
+          liara deploy --app="portt" --api-token="$LIARA_TOKEN" --detach
